Add social icons.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,16 +22,35 @@
       <div id="title">
         <h1>About Me</h1>
         <p>Khorkov Vyacheslav, iOS Developer</p>
-        <p>
-        <a href="https://github.com/artFintch">GitHub</a>
-        |
-        <a href="https://medium.com/@artFintch">Medium</a>
-        |
-        <a href="https://ekaterinburg.hh.ru/applicant/resumes/view?resume=227c8eb0ff013a445d0039ed1f395a436a494a">hh</a>
-        </p>
+        <div class="icons">
+          <div>
+            <a class="icon" href="https://github.com/artFintch">
+              <img src="../assets/images/github.png">
+            </a>
+          </div>
+          <div>
+            <a class="icon" href="https://medium.com/@artFintch">
+              <img src="../assets/images/medium_bw.png">
+            </a>
+          </div>
+          <div>
+            <a class="icon" href="https://ekaterinburg.hh.ru/applicant/resumes/view?resume=227c8eb0ff013a445d0039ed1f395a436a494a">
+              <img src="../assets/images/hh_bw.png">
+            </a>
+          </div>
+          <div>
+            <a class="icon" href="https://www.linkedin.com/in/vyacheslav-khorkov-92b65164/">
+              <img src="../assets/images/linkedin_bw.png">
+            </a>
+          </div>
+          <div>
+            <a class="icon" href="https://twitter.com/artfintch">
+              <img src="../assets/images/twitter_bw.png">
+            </a>
+          </div>
+        </div>
         <hr>
       </div>
-      <br>
       {{ content }}
     </section>
   </div>
