--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,8 +44,8 @@
             </a>
           </div>
           <div>
-            <a class="icon" href="https://twitter.com/artfintch">
-              <img src="../assets/images/twitter_bw.png">
+            <a class="icon" href="https://www.upwork.com/o/profiles/users/_~01379889e9ed58198c/">
+              <img src="../assets/images/upwork_bw.png">
             </a>
           </div>
         </div>
