Add hints for icons.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,28 +24,28 @@
         <p>Khorkov Vyacheslav, iOS Developer</p>
         <div class="icons">
           <div>
-            <a class="icon" href="https://github.com/artFintch">
-              <img src="../assets/images/github.png">
+            <a class="icon" title="GitHub" href="https://github.com/artFintch">
+              <img alt="GitHub" src="../assets/images/github.png">
             </a>
           </div>
           <div>
-            <a class="icon" href="https://medium.com/@artFintch">
-              <img src="../assets/images/medium_bw.png">
+            <a class="icon" title="Medium" href="https://medium.com/@artFintch">
+              <img alt="Medium" src="../assets/images/medium_bw.png">
             </a>
           </div>
           <div>
-            <a class="icon" href="https://ekaterinburg.hh.ru/applicant/resumes/view?resume=227c8eb0ff013a445d0039ed1f395a436a494a">
-              <img src="../assets/images/hh_bw.png">
+            <a class="icon" title="hh" href="https://ekaterinburg.hh.ru/applicant/resumes/view?resume=227c8eb0ff013a445d0039ed1f395a436a494a">
+              <img alt="hh" src="../assets/images/hh_bw.png">
             </a>
           </div>
           <div>
-            <a class="icon" href="https://www.linkedin.com/in/vyacheslav-khorkov-92b65164/">
-              <img src="../assets/images/linkedin_bw.png">
+            <a class="icon" title="LinkedIn" href="https://www.linkedin.com/in/vyacheslav-khorkov-92b65164/">
+              <img alt="LinkedIn" src="../assets/images/linkedin_bw.png">
             </a>
           </div>
           <div>
-            <a class="icon" href="https://www.upwork.com/o/profiles/users/_~01379889e9ed58198c/">
-              <img src="../assets/images/upwork_bw.png">
+            <a class="icon" title="Upwork" href="https://www.upwork.com/o/profiles/users/_~01379889e9ed58198c/">
+              <img alt="Upwork" src="../assets/images/upwork_bw.png">
             </a>
           </div>
         </div>
