Change hint for hh icon.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,8 +34,8 @@
             </a>
           </div>
           <div>
-            <a class="icon" title="hh" href="https://ekaterinburg.hh.ru/applicant/resumes/view?resume=227c8eb0ff013a445d0039ed1f395a436a494a">
-              <img alt="hh" src="../assets/images/hh_bw.png">
+            <a class="icon" title="HeadHunter" href="https://ekaterinburg.hh.ru/applicant/resumes/view?resume=227c8eb0ff013a445d0039ed1f395a436a494a">
+              <img alt="HeadHunter" src="../assets/images/hh_bw.png">
             </a>
           </div>
           <div>
