--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>About Me</title>
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+    <link rel="stylesheet" href="../assets/css/Balloon.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script src="{{ '/assets/js/respond.js' | relative_url }}"></script>
     <!--[if lt IE 9]>
@@ -24,28 +25,28 @@
         <p>Khorkov Vyacheslav, iOS Developer</p>
         <div class="icons">
           <div>
-            <a class="icon" title="GitHub" href="https://github.com/artFintch">
-              <img alt="GitHub" src="../assets/images/github.png">
+            <a data-balloon="GitHub" data-balloon-pos="down" class="icon" href="https://github.com/artFintch">
+              <img src="../assets/images/github.png">
             </a>
           </div>
           <div>
-            <a class="icon" title="Medium" href="https://medium.com/@artFintch">
-              <img alt="Medium" src="../assets/images/medium_bw.png">
+            <a data-balloon="Medium" data-balloon-pos="down" class="icon" href="https://medium.com/@artFintch">
+              <img src="../assets/images/medium_bw.png">
             </a>
           </div>
           <div>
-            <a class="icon" title="HeadHunter" href="https://ekaterinburg.hh.ru/applicant/resumes/view?resume=227c8eb0ff013a445d0039ed1f395a436a494a">
-              <img alt="HeadHunter" src="../assets/images/hh_bw.png">
+            <a data-balloon="HeadHunter" data-balloon-pos="down" class="icon" href="https://ekaterinburg.hh.ru/applicant/resumes/view?resume=227c8eb0ff013a445d0039ed1f395a436a494a">
+              <img src="../assets/images/hh_bw.png">
             </a>
           </div>
           <div>
-            <a class="icon" title="LinkedIn" href="https://www.linkedin.com/in/vyacheslav-khorkov-92b65164/">
-              <img alt="LinkedIn" src="../assets/images/linkedin_bw.png">
+            <a data-balloon="LinkedIn" data-balloon-pos="down" class="icon" href="https://www.linkedin.com/in/vyacheslav-khorkov-92b65164/">
+              <img src="../assets/images/linkedin_bw.png">
             </a>
           </div>
           <div>
-            <a class="icon" title="Upwork" href="https://www.upwork.com/o/profiles/users/_~01379889e9ed58198c/">
-              <img alt="Upwork" src="../assets/images/upwork_bw.png">
+            <a data-balloon="Upwork" data-balloon-pos="down" class="icon" href="https://www.upwork.com/o/profiles/users/_~01379889e9ed58198c/">
+              <img src="../assets/images/upwork_bw.png">
             </a>
           </div>
         </div>
