Remove content block.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,10 @@
   </head>
   <body>
 
+    <div class="outer">
+      <div class="middle">
+        <div class="inner">
+
   <div class="wrapper">
     <section>
       <div id="title">
@@ -50,11 +54,14 @@
             </a>
           </div>
         </div>
-        <hr>
       </div>
       {{ content }}
     </section>
   </div>
+
+</div>
+  </div>
+</div>
 
   <footer>
     <div id="footer">
