--- a/_sass/jekyll-theme-midnight.scss
+++ b/_sass/jekyll-theme-midnight.scss
@@ -184,7 +184,7 @@ section {
   max-width:650px;
   padding: 30px 0px 20px 0px;
   //margin: 20px 0;
-  margin-top: 30px;
+  //margin-top: 30px;
 
   #title {
     border: 0;
@@ -209,4 +209,22 @@ section {
       text-align: center;
     }
   }
+}
+
+.outer {
+    display: table;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+}
+
+.middle {
+    display: table-cell;
+    vertical-align: middle;
+}
+
+.inner {
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 80px;
 }
