--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="../assets/css/Balloon.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script src="{{ '/assets/js/respond.js' | relative_url }}"></script>
+    <script type="application/ld+json">
+    {"image":{"@type":"ImageObject"
+    "width":1170,
+    "height":331,
+    "url":"https://cdn-images-1.medium.com/max/2000/1*Ji3KEVxbA_7uflAgm1bg-g.png"}}
+    </script>
     <!--[if lt IE 9]>
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
