Add another image for test again.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,10 +15,9 @@
     <link rel="stylesheet" href="{{ '/assets/css/ie.css' | relative_url }}">
     <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <meta property="og:image" content="https://cdn-images-1.medium.com/max/2000/1*Ji3KEVxbA_7uflAgm1bg-g.png"/>
   </head>
   <body>
-    <img src="https://cdn-images-1.medium.com/max/2000/1*Ji3KEVxbA_7uflAgm1bg-g.png" style="display: none;" />
-
     <div class="outer">
       <div class="middle">
         <div class="inner">
