Add another image for test again.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,20 @@
     <link rel="stylesheet" href="{{ '/assets/css/ie.css' | relative_url }}">
     <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <meta property="og:image" content="https://cdn-images-1.medium.com/max/2000/1*Ji3KEVxbA_7uflAgm1bg-g.png"/>
+    <script type="application/ld+json">
+    {"@context":"http://schema.org",
+    "@type":"NewsArticle",
+    "image":{"@type":"ImageObject","width":1170,"height":331,"url":"https://cdn-images-1.medium.com/max/2000/1*Ji3KEVxbA_7uflAgm1bg-g.png"},
+    "datePublished":"2017-10-04T19:01:56.478Z",
+    "dateModified":"2017-10-08T20:28:06.107Z",
+    "headline":"(ч.3) Яндекс Школа Мобильной Разработки iOS","name":"(ч.3) Яндекс Школа Мобильной Разработки iOS",
+    "keywords":["iOS","Swift","Яндекс","Обучение","Yandex"],
+    "author":{"@type":"Person","name":"Вячеслав Хорьков","url":"https://medium.com/@artFintch"},
+    "creator":["Вячеслав Хорьков"],
+    "publisher":{"@type":"Organization","name":"Medium","url":"https://medium.com/",
+    "logo":{"@type":"ImageObject","width":215,"height":60,"url":"https://cdn-images-1.medium.com/max/430/1*5ztbgEt4NqpVaxTc64C-XA.png"}},
+    "mainEntityOfPage":"https://medium.com/@artFintch/yandex-ios-school-3-f097524bd99e"}
+    </script>
   </head>
   <body>
     <div class="outer">
