Add another image for test again.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,6 +31,11 @@
     </script>
   </head>
   <body>
+    <img class="progressiveMedia-image js-progressiveMedia-image" data-src="https://cdn-images-1.medium.com/max/2000/1*Ji3KEVxbA_7uflAgm1bg-g.png">
+    <noscript class="js-progressiveMedia-inner">
+    <img class="progressiveMedia-noscript js-progressiveMedia-inner" src="https://cdn-images-1.medium.com/max/2000/1*Ji3KEVxbA_7uflAgm1bg-g.png">
+    </noscript>
+
     <div class="outer">
       <div class="middle">
         <div class="inner">
