--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,27 +15,12 @@
     <link rel="stylesheet" href="{{ '/assets/css/ie.css' | relative_url }}">
     <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <script type="application/ld+json">
-    {"@context":"http://schema.org",
-    "@type":"NewsArticle",
-    "image":{"@type":"ImageObject","width":1170,"height":331,"url":"https://cdn-images-1.medium.com/max/2000/1*Ji3KEVxbA_7uflAgm1bg-g.png"},
-    "datePublished":"2017-10-04T19:01:56.478Z",
-    "dateModified":"2017-10-08T20:28:06.107Z",
-    "headline":"(ч.3) Яндекс Школа Мобильной Разработки iOS","name":"(ч.3) Яндекс Школа Мобильной Разработки iOS",
-    "keywords":["iOS","Swift","Яндекс","Обучение","Yandex"],
-    "author":{"@type":"Person","name":"Вячеслав Хорьков","url":"https://medium.com/@artFintch"},
-    "creator":["Вячеслав Хорьков"],
-    "publisher":{"@type":"Organization","name":"Medium","url":"https://medium.com/",
-    "logo":{"@type":"ImageObject","width":215,"height":60,"url":"https://cdn-images-1.medium.com/max/430/1*5ztbgEt4NqpVaxTc64C-XA.png"}},
-    "mainEntityOfPage":"https://medium.com/@artFintch/yandex-ios-school-3-f097524bd99e"}
-    </script>
+    <meta property="og:title" content="(ч.3) Яндекс Школа Мобильной Разработки iOS – Вячеслав Хорьков – Medium">
+    <meta property="og:url" content="https://medium.com/@artFintch/yandex-ios-school-3-f097524bd99e">
+    <meta property="og:image" content="https://cdn-images-1.medium.com/max/1200/1*Ji3KEVxbA_7uflAgm1bg-g.png">
+    <meta property="og:description" content="Обучение">
   </head>
   <body>
-    <img class="progressiveMedia-image js-progressiveMedia-image" data-src="https://cdn-images-1.medium.com/max/2000/1*Ji3KEVxbA_7uflAgm1bg-g.png">
-    <noscript class="js-progressiveMedia-inner">
-    <img class="progressiveMedia-noscript js-progressiveMedia-inner" src="https://cdn-images-1.medium.com/max/2000/1*Ji3KEVxbA_7uflAgm1bg-g.png">
-    </noscript>
-
     <div class="outer">
       <div class="middle">
         <div class="inner">
