Test LinkedIn integration #2.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="{{ site.lang | default: "en-US" }}">
-  <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# medium-com: http://ogp.me/ns/fb/medium-com#">
+  <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>About Me</title>
@@ -15,12 +15,11 @@
     <link rel="stylesheet" href="{{ '/assets/css/ie.css' | relative_url }}">
     <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <meta property="og:title" content="(ч.3) Яндекс Школа Мобильной Разработки iOS – Вячеслав Хорьков – Medium">
-    <meta property="og:url" content="https://medium.com/@artFintch/yandex-ios-school-3-f097524bd99e">
-    <meta property="og:image" content="https://cdn-images-1.medium.com/max/1200/1*Ji3KEVxbA_7uflAgm1bg-g.png">
-    <meta property="og:description" content="Обучение">
-    <script type="application/ld+json">{"@context":"http://schema.org","@type":"NewsArticle","image":{"@type":"ImageObject","width":1170,"height":331,"url":"https://cdn-images-1.medium.com/max/2000/1*Ji3KEVxbA_7uflAgm1bg-g.png"},"datePublished":"2017-10-04T19:01:56.478Z","dateModified":"2017-11-28T08:27:25.574Z","headline":"(ч.3) Яндекс Школа Мобильной Разработки iOS","name":"(ч.3) Яндекс Школа Мобильной Разработки iOS","keywords":["iOS","Swift","Яндекс","Обучение","Yandex"],"author":{"@type":"Person","name":"Вячеслав Хорьков","url":"https://medium.com/@artFintch"},"creator":["Вячеслав Хорьков"],"publisher":{"@type":"Organization","name":"Medium","url":"https://medium.com/","logo":{"@type":"ImageObject","width":215,"height":60,"url":"https://cdn-images-1.medium.com/max/430/1*5ztbgEt4NqpVaxTc64C-XA.png"}},"mainEntityOfPage":"https://medium.com/@artFintch/yandex-ios-school-3-f097524bd99e"}
-    </script>
+
+    <meta content="artFintch (Khorkov Vyacheslav)" property="og:title">
+    <meta content="https://avatars0.githubusercontent.com/u/1075698?s=400&amp;v=4" property="og:image">
+    <meta content="https://github.com/artFintch" property="og:url">
+    <meta content="artFintch has 13 repositories available. Follow their code on GitHub." property="og:description">
   </head>
   <body>
     <div class="outer">
