--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
-<!doctype html>
-<html lang="{{ site.lang | default: "en-US" }}">
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
@@ -8,12 +8,6 @@
     <link rel="stylesheet" href="../assets/css/Balloon.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script src="{{ '/assets/js/respond.js' | relative_url }}"></script>
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <!--[if lt IE 8]>
-    <link rel="stylesheet" href="{{ '/assets/css/ie.css' | relative_url }}">
-    <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
     <meta content="artFintch (Khorkov Vyacheslav)" property="og:title">
@@ -22,6 +16,10 @@
     <meta content="artFintch has 13 repositories available. Follow their code on GitHub." property="og:description">
   </head>
   <body>
+    <a href="/account">
+      <img height="230" src="https://avatars1.githubusercontent.com/u/1075698?s=460&amp;v=4" width="230">
+    </a>
+
     <div class="outer">
       <div class="middle">
         <div class="inner">
