--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,9 +16,11 @@
     <meta content="artFintch has 13 repositories available. Follow their code on GitHub." property="og:description">
   </head>
   <body>
-    <a href="/account">
-      <img height="230" src="https://avatars1.githubusercontent.com/u/1075698?s=460&amp;v=4" width="230">
-    </a>
+    <div role="main">
+      <a href="/account">
+        <img height="230" src="https://avatars1.githubusercontent.com/u/1075698?s=460&amp;v=4" width="230">
+      </a>
+    </div>
 
     <div class="outer">
       <div class="middle">
