--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,9 +17,7 @@
   </head>
   <body>
     <div role="main">
-      <a href="/account">
-        <img height="230" src="https://avatars1.githubusercontent.com/u/1075698?s=460&amp;v=4" width="230">
-      </a>
+      <img alt height="230" src="https://avatars1.githubusercontent.com/u/1075698?s=460&amp;v=4" width="230">
     </div>
 
     <div class="outer">
