--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <head prefix="og: http://ogp.me/ns#">
+    <meta property="og:title" content="Test title" />
+    <meta property="og:description" content="Test description" />
+    <meta property="og:url" content="https://github.com/artFintch" />
+    <meta property="og:image" content="https://avatars0.githubusercontent.com/u/1075698?s=400&amp;v=4" />
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>About Me</title>
@@ -10,10 +15,7 @@
     <script src="{{ '/assets/js/respond.js' | relative_url }}"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-    <meta content="artFintch (Khorkov Vyacheslav)" property="og:title">
-    <meta content="https://avatars0.githubusercontent.com/u/1075698?s=400&amp;v=4" property="og:image">
-    <meta content="https://github.com/artFintch" property="og:url">
-    <meta content="artFintch has 13 repositories available. Follow their code on GitHub." property="og:description">
+
   </head>
   <body>
     <div role="main">
