--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,21 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head prefix="og: http://ogp.me/ns#">
+    <meta charset="utf-8">
+    <title>About Me</title>
     <meta property="og:title" content="Test title" />
     <meta property="og:description" content="Test description" />
     <meta property="og:url" content="https://github.com/artFintch" />
-    <meta property="og:image" content="https://avatars0.githubusercontent.com/u/1075698?s=400&amp;v=4" />
-
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>About Me</title>
+    <meta property="og:image" content="https://pbs.twimg.com/media/DQJYvT0X0AIw9TD.jpg" />
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
     <link rel="stylesheet" href="../assets/css/Balloon.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script src="{{ '/assets/js/respond.js' | relative_url }}"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-
-
   </head>
   <body>
     <div role="main">
