--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,62 +14,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   </head>
   <body>
-    <div role="main">
+    <div role="main" style="display: none;">
       <img alt height="230" src="https://avatars1.githubusercontent.com/u/1075698?s=460&amp;v=4" width="230">
     </div>
-
     <div class="outer">
       <div class="middle">
         <div class="inner">
-
-  <div class="wrapper">
-    <section>
-      <div id="title">
-        <h1>About Me</h1>
-        <p>Khorkov Vyacheslav, iOS Developer</p>
-        <div class="icons">
-          <div>
-            <a data-balloon="GitHub" data-balloon-pos="down" class="icon" href="https://github.com/artFintch">
-              <img src="../assets/images/github.png">
-            </a>
-          </div>
-          <div>
-            <a data-balloon="Medium" data-balloon-pos="down" class="icon" href="https://medium.com/@artFintch">
-              <img src="../assets/images/medium_bw.png">
-            </a>
-          </div>
-          <div>
-            <a data-balloon="HeadHunter" data-balloon-pos="down" class="icon" href="https://ekaterinburg.hh.ru/applicant/resumes/view?resume=227c8eb0ff013a445d0039ed1f395a436a494a">
-              <img src="../assets/images/hh_bw.png">
-            </a>
-          </div>
-          <div>
-            <a data-balloon="LinkedIn" data-balloon-pos="down" class="icon" href="https://www.linkedin.com/in/vyacheslav-khorkov-92b65164/">
-              <img src="../assets/images/linkedin_bw.png">
-            </a>
-          </div>
-          <div>
-            <a data-balloon="Upwork" data-balloon-pos="down" class="icon" href="https://www.upwork.com/o/profiles/users/_~01379889e9ed58198c/">
-              <img src="../assets/images/upwork_bw.png">
-            </a>
-          </div>
+          <div class="wrapper">
+            <section>
+              <div id="title">
+                <h1>About Me</h1>
+                <p>Khorkov Vyacheslav, iOS Developer</p>
+                <div class="icons">
+                  <div>
+                    <a data-balloon="GitHub" data-balloon-pos="down" class="icon" href="https://github.com/artFintch">
+                      <img src="../assets/images/github.png">
+                    </a>
+                  </div>
+                  <div>
+                  <a data-balloon="Medium" data-balloon-pos="down" class="icon" href="https://medium.com/@artFintch">
+                    <img src="../assets/images/medium_bw.png">
+                  </a>
+                </div>
+                <div>
+                  <a data-balloon="HeadHunter" data-balloon-pos="down" class="icon" href="https://ekaterinburg.hh.ru/applicant/resumes/view?resume=227c8eb0ff013a445d0039ed1f395a436a494a">
+                    <img src="../assets/images/hh_bw.png">
+                  </a>
+                </div>
+                <div>
+                  <a data-balloon="LinkedIn" data-balloon-pos="down" class="icon" href="https://www.linkedin.com/in/vyacheslav-khorkov-92b65164/">
+                    <img src="../assets/images/linkedin_bw.png">
+                  </a>
+                </div>
+                <div>
+                  <a data-balloon="Upwork" data-balloon-pos="down" class="icon" href="https://www.upwork.com/o/profiles/users/_~01379889e9ed58198c/">
+                    <img src="../assets/images/upwork_bw.png">
+                  </a>
+                </div>
+              </div>
+            </div>
+            {{ content }}
+          </section>
         </div>
       </div>
-      {{ content }}
-    </section>
+    </div>
   </div>
-
-</div>
-  </div>
-</div>
-
   <footer>
     <div id="footer">
-      <span>Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
+      <span>Theme by
+        <a href="https://twitter.com/michigangraham">
+          mattgraham
+        </a>
+      </span>
       <br>
-      <span>© 2017. All rights reserved.</span>
+      <span>
+        © 2017. All rights reserved.
+      </span>
     </div>
   </footer>
-
-  </body>
+</body>
 </html>
