--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     <meta property="og:title" content="Test title" />
     <meta property="og:description" content="Test description" />
     <meta property="og:url" content="https://github.com/artFintch" />
-    <meta property="og:image" content="https://pbs.twimg.com/media/DQJYvT0X0AIw9TD.jpg" />
+    <meta property="og:image" content="https://dummyimage.com/1201x628/0cc/fff.jpg&text=Test+LinkedIn" />
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
     <link rel="stylesheet" href="../assets/css/Balloon.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -15,7 +15,7 @@
   </head>
   <body>
     <div role="main" style="display: none;">
-      <img alt height="230" src="https://avatars1.githubusercontent.com/u/1075698?s=460&amp;v=4" width="230">
+      <img alt src="https://dummyimage.com/1201x628/0cc/fff.jpg&text=Test+LinkedIn" />
     </div>
     <div class="outer">
       <div class="middle">
