Change og metadata.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,10 +3,10 @@
   <head prefix="og: http://ogp.me/ns#">
     <meta charset="utf-8">
     <title>About Me</title>
-    <meta property="og:title" content="Test title" />
-    <meta property="og:description" content="Test description" />
+    <meta property="og:title" content="Khorkov Vyacheslav, iOS Developer" />
+    <meta property="og:description" content="About Me" />
     <meta property="og:url" content="https://github.com/artFintch" />
-    <meta property="og:image" content="https://dummyimage.com/1201x628/0cc/fff.jpg&text=Test+LinkedIn" />
+    <meta property="og:image" content="https://avatars1.githubusercontent.com/u/1075698?s=460&v=4" />
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
     <link rel="stylesheet" href="../assets/css/Balloon.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
