Add avatar image.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,9 @@
           <div class="wrapper">
             <section>
               <div id="title">
+                <div style="padding: 14px" align="middle">
+                  <img style="opacity: 0.9; border-radius: 15px; background: linear_gradient(#2a2a29, #1c1c1c);" width="170px" src="../assets/images/av.jpg">
+                </div>
                 <h1>About Me</h1>
                 <p>Khorkov Vyacheslav, iOS Developer</p>
                 <div class="icons">
