--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,12 +1,11 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
-      <a data-balloon="Курлык" data-balloon-pos="u" data-balloon-length="medium">
+      <a data-balloon="Курлык" data-balloon-length="medium">
         <img class="avatar" src="/public/assets/imgs/av.jpg">
       </a>
-<!--      <img class="avatar" src="/public/assets/imgs/av.jpg">-->
       <h1>
-        <a href="{{ site.baseurl }}p">
+        <a href="{{ site.baseurl }}">
           {{ site.title }}
         </a>
       </h1>
