--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 
   {% include head.html %}
 
-  <body class="layout-reverse theme-birds-of-paradise">
+  <body class="theme-birds-of-paradise">
 
     {% include sidebar.html %}
 
