--- a/_includes/head.html
+++ b/_includes/head.html
@@ -36,7 +36,8 @@
   <link rel="stylesheet" href="/public/css/hyde.css">
   <link rel="stylesheet" href="/public/css/balloon.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Neucha:400,400italic,700|Abril+Fatface">
-      
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:400,400italic,700|Abril+Fatface">
+
   <!-- Icons -->
   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/public/apple-touch-icon-144-precomposed.png">
                                  <link rel="shortcut icon" href="/public/favicon.ico">
