--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -32,7 +32,7 @@
  */
 
 html {
-  font-family: "Neucha", "PT Sans", Helvetica, Arial, sans-serif;
+  font-family: "Nunito", "PT Sans", Helvetica, Arial, sans-serif;
 }
 @media (min-width: 48em) {
   html {
@@ -58,6 +58,7 @@ html {
   padding: 10px;
   color: rgba(255,255,255,.5);
   background-color: #202020;
+  font-family: "Neucha", "PT Sans", Helvetica, Arial, sans-serif;
 }
 @media (min-width: 48em) {
   .sidebar {
@@ -197,6 +198,11 @@ a.sidebar-nav-item:focus {
     margin-bottom: 10px;
 }
 
+.post-title,
+.post-date {
+    font-family: "Neucha", "PT Sans", Helvetica, Arial, sans-serif;
+}
+
 /*
  * Themes
  *
@@ -299,10 +305,14 @@ a.sidebar-nav-item:focus {
     text-decoration: none;
     color: #fff;
 }
+.theme-birds-of-paradise .post-title {
+    font-family: "Neucha", "PT Sans", Helvetica, Arial, sans-serif;
+}
 .theme-birds-of-paradise a:hover, a:focus {
     color: #E86648;
 }
 .theme-birds-of-paradise .post-date {
+    font-family: "Neucha", "PT Sans", Helvetica, Arial, sans-serif;
     color: #EFAC32;
 }
 .theme-birds-of-paradise .post img {
