Add instagram icon.

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -14,34 +14,46 @@
     <div>
     <div class="icons">
         <div>
-            <a data-balloon="Twitter" data-balloon-pos="down" class="icon" href="https://twitter.com/artFintch">
+            <a data-balloon="Instagram" data-balloon-pos="down" class="icon"
+                href="https://www.instagram.com/artfintch/">
+                <img src="/public/assets/imgs/instagram_bw.png">
+            </a>
+        </div>
+        <div>
+            <a data-balloon="Twitter" data-balloon-pos="down" class="icon"
+                href="https://twitter.com/artFintch">
                 <img src="/public/assets/imgs/twitter_bw.png">
-                    </a>
+            </a>
         </div>
         <div>
-            <a data-balloon="Medium" data-balloon-pos="down" class="icon" href="https://medium.com/@artFintch">
+            <a data-balloon="Medium" data-balloon-pos="down" class="icon"
+                href="https://medium.com/@artFintch">
                 <img src="/public/assets/imgs/medium_bw.png">
-                    </a>
+            </a>
         </div>
         <div>
-            <a data-balloon="GitHub" data-balloon-pos="down" class="icon" href="https://github.com/artFintch">
+            <a data-balloon="GitHub" data-balloon-pos="down" class="icon"
+                href="https://github.com/artFintch">
                 <img src="/public/assets/imgs/github_bw.png">
-                    </a>
+            </a>
         </div>
         <div>
-            <a data-balloon="HeadHunter" data-balloon-pos="down" class="icon" href="https://ekaterinburg.hh.ru/applicant/resumes/view?resume=227c8eb0ff013a445d0039ed1f395a436a494a">
+            <a data-balloon="HeadHunter" data-balloon-pos="down" class="icon"
+                href="https://ekaterinburg.hh.ru/applicant/resumes/view?resume=227c8eb0ff013a445d0039ed1f395a436a494a">
                 <img src="/public/assets/imgs/hh_bw.png">
-                    </a>
+            </a>
         </div>
         <div>
-            <a data-balloon="LinkedIn" data-balloon-pos="down" class="icon" href="https://www.linkedin.com/in/vyacheslav-khorkov-92b65164">
+            <a data-balloon="LinkedIn" data-balloon-pos="down" class="icon"
+                href="https://www.linkedin.com/in/vyacheslav-khorkov-92b65164">
                 <img src="/public/assets/imgs/linkedin_bw.png">
-                    </a>
+            </a>
         </div>
         <div>
-            <a data-balloon="Upwork" data-balloon-pos="down" class="icon" href="https://www.upwork.com/o/profiles/users/_~01379889e9ed58198c">
+            <a data-balloon="Upwork" data-balloon-pos="down" class="icon"
+                href="https://www.upwork.com/o/profiles/users/_~01379889e9ed58198c">
                 <img src="/public/assets/imgs/upwork_bw.png">
-                    </a>
+            </a>
         </div>
     </div>
     </div>
